fixed title text alignment

--- a/style/style.css
+++ b/style/style.css
@@ -255,10 +255,21 @@ and (max-device-width : 480px) {
 	position:absolute;
 	width:100%;
 	left: 0%;
-	top: 80%;
 	text-align:center;
 	font-size:1.25rem;
 	z-index:98;
+}
+
+@media screen and (orientation:landscape) {
+	#attributions {
+		top: calc(50vh + 15vh);
+	}
+}
+
+@media screen and (orientation:portrait) {
+	#attributions {
+		top: calc(50vh + 15vw);
+	}
 }
 
 @media only screen 
